# Databricks-Agent-Bricks

./: .gitignore  CONTRIBUTING.md  README.md  databricks.yml  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: backend-agent.md  code-review-agent.md  data-analyst-agent.md  data-engineering-agent.md  data-scientist-agent.md  documentation-agent.md  frontend-agent.md  orchestrator-agent.md  qa-agent.md  security-agent.md  technical-planning-agent.md
.cursor/hooks/: PAYLOAD_SAMPLES.md  de_hook_policies.py  de_pipeline_tests_coach.py  de_pr_quality_inject.py  de_spark_quality_static.py  lib_hook_io.py
.cursor/orchestration/: README.md  last_story.example.json  locks.schema.json
.cursor/rules/: architecture-first-development.mdc  backward-compatibility.mdc  dependency-justification.mdc  jira-atlassian-mcp.mdc  mandatory-documentation.mdc  mandatory-tests.mdc  no-hardcoded-secrets.mdc  no-silent-refactors.mdc  no-unrelated-changes.mdc  observability-required.mdc  one-story-per-pr.mdc  ownership-enforcement.mdc  small-scoped-changes.mdc
.cursor/skills/: README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cursor-framework-ci.yml  (+3 more)
docs/: git-workflow.md
notebooks/: README.md
resources/: README.md
tests/: test_audit_lineage.py  test_cicd_workflow_gates.py  test_cluster_policy.py  test_databricks_bundle.py  test_hook_policies.py  test_job_resources.py  test_notebook_sync.py  test_pipeline_runs_ingestion.py  test_promotion_workflow.py  test_repo_structure.py  test_schema_contracts.py  test_uc_grants.py  test_uc_sql_assets.py
(+75 files in other folders)
